# RCompiler

./: .gitignore  .gitmodules  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  ai_usage.md  builtin.ll  builtin.s  builtin_begin.s  builtin_end.s  builtin_gcc.s  builtin_gcc_O0.s  cmake_install.cmake  gcc_register_strategy_plan.md  gen_s.sh  log.txt  optimize.md  plan.md  random_access_analysis.md  run.sh  run_s.sh  test.s  test_mem_access.rx  test_rand_access.rx
.github/workflows/: cmake-ci.yml
my_data/: comment1.txt  comment2.txt
performance/: 1.txt  2.txt  3.txt  README.md  visualize.py
script/: gen_ll.sh  gen_s.sh  run_x86.sh
script/IR/: gen_s.sh  run.sh  test_llvm.bash
script/codegen/: gen_s.sh  gen_std_s.sh  gen_std_single.sh  test.sh  test_single.sh  test_submit.sh
src/IR/: IR_node.cpp  builtin.c  function_map.cpp  name_allocator.cpp  struct_map.cpp
src/IR_visitor/assembly_generator/: assembly_generator.cpp
src/IR_visitor/cse/: cse.cpp
src/IR_visitor/empty_block_eliminator/: empty_block_eliminator.cpp
src/IR_visitor/function_inliner/: function_inliner.cpp
src/IR_visitor/memory_allocator/: memory_allocator.cpp
src/IR_visitor/parameter_demoter/: parameter_demoter.cpp
src/IR_visitor/phi_eliminator/: phi_eliminator.cpp
src/IR_visitor/preprocessor/: preprocessor.cpp
src/IR_visitor/printer/: IR_printer.cpp
src/IR_visitor/sccp/: sccp.cpp
src/codegen/: instruction.cpp  phi_topo.cpp  register.cpp
src/common/: config.cpp  error.cpp  tool_func.cpp
src/data_loader/: data_loader.cpp
src/include/IR/: IR_node.h  function_map.h  name_allocator.h  struct_map.h
src/include/IR_visitor/: IR_visitor_base.h
src/include/codegen/: instruction.h  phi_topo.h  register.h
src/include/common/: bit_set.h  config.h  error.h  memory_pool.hpp  tool_func.h
src/include/data_loader/: data_loader.h
src/include/lexer/: lexer.h
src/include/liveness_analysis/: CFG.h  CFG_builder.h  dominator_tree.h
src/include/mem2reg/: eliminator.h  mem2reg.h
src/include/parser/: AST_node.h  class_declaration.h  crate.h  enumeration.h  error.h  expression.h  function.h  implementation.h  item.h  module.h  node_pool.h  node_pool.hpp  parser.hpp  statement.h  struct.h  terminal.h  trait.h
src/include/reg_alloc/: interference_graph.h  reg_alloc.h
src/lexer/: intermediate.cpp  lexer.cpp  lexer_test.cpp  meaningless.cpp  single.cpp  token.cpp
src/liveness_analysis/: CFG.cpp  CFG_builder.cpp  dominator_tree.cpp
src/mem2reg/: eliminator.cpp  mem2reg.cpp
src/parser/: AST_node.cpp  accept.cpp  crate.cpp  error.cpp  item.cpp  module.cpp  node_pool.cpp  parser_test.cpp  terminal.cpp
src/parser/node/: AST_node.cpp  crate.cpp  enumeration.cpp  expression.cpp  function.cpp  generic.cpp  implementation.cpp  item.cpp  module.cpp  path.cpp  pattern.cpp  statement.cpp  struct.cpp  terminal.cpp  trait.cpp  type.cpp
src/reg_alloc/: interference_graph.cpp  reg_alloc.cpp
src/semantic/builtin/: buildin_node.cpp
src/semantic/scope/: scope.cpp
src/semantic/type/: type.cpp
src/visitor/IR_generator/: IR_generator.cpp
src/visitor/checker/: first_checker.cpp  second_checker.cpp  third_checker.cpp
src/visitor/printer/: printer.cpp
test/: IR_single.cpp  IR_single_optimized.cpp  IR_submit.cpp  IR_test.cpp  codegen_single.cpp  codegen_submit.cpp  codegen_test.cpp  dominator.cpp  parser_test.cpp  reg_alloc_test.cpp  run_isolated_tests.py  semantic_test.cpp
test_analysis/: test_arith.rx  test_array_simple.rx  test_branch_patterns.rx  test_bug_no_const.rx  test_call_overhead.rx  test_calls.rx  test_const_reuse.rx  test_control.rx  test_cse.rx  test_let_uninit.rx  test_loop_hoist.rx  test_loop_patterns.rx  test_mem_access.rx  test_memory.rx  test_minimal_bug.rx  test_no_const_fold.rx  test_phi_intensive.rx  test_power_two.rx  test_redundant.rx  test_shortcircuit.rx  test_simple_const.rx  test_unsigned_pow2.rx
test_reports/: test_report_SemanticTest_TestcaseTest_Array1.xml  test_report_SemanticTest_TestcaseTest_Array2.xml  test_report_SemanticTest_TestcaseTest_Array3.xml  test_report_SemanticTest_TestcaseTest_Array4.xml  test_report_SemanticTest_TestcaseTest_Array5.xml  test_report_SemanticTest_TestcaseTest_Array6.xml  test_report_SemanticTest_TestcaseTest_Array7.xml  test_report_SemanticTest_TestcaseTest_Array8.xml  test_report_SemanticTest_TestcaseTest_Autoref1.xml  test_report_SemanticTest_TestcaseTest_Autoref2.xml  test_report_SemanticTest_TestcaseTest_Autoref3.xml  test_report_SemanticTest_TestcaseTest_Autoref4.xml  test_report_SemanticTest_TestcaseTest_Autoref5.xml  test_report_SemanticTest_TestcaseTest_Autoref6.xml  test_report_SemanticTest_TestcaseTest_Autoref7.xml  test_report_SemanticTest_TestcaseTest_Autoref8.xml  test_report_SemanticTest_TestcaseTest_Autoref9.xml  test_report_SemanticTest_TestcaseTest_Basic1.xml  test_report_SemanticTest_TestcaseTest_Basic10.xml  test_report_SemanticTest_TestcaseTest_Basic11.xml  test_report_SemanticTest_TestcaseTest_Basic12.xml  test_report_SemanticTest_TestcaseTest_Basic13.xml  test_report_SemanticTest_TestcaseTest_Basic14.xml  test_report_SemanticTest_TestcaseTest_Basic15.xml  test_report_SemanticTest_TestcaseTest_Basic16.xml  test_report_SemanticTest_TestcaseTest_Basic17.xml  test_report_SemanticTest_TestcaseTest_Basic18.xml  test_report_SemanticTest_TestcaseTest_Basic19.xml  test_report_SemanticTest_TestcaseTest_Basic2.xml  test_report_SemanticTest_TestcaseTest_Basic20.xml  test_report_SemanticTest_TestcaseTest_Basic21.xml  test_report_SemanticTest_TestcaseTest_Basic22.xml  test_report_SemanticTest_TestcaseTest_Basic23.xml  test_report_SemanticTest_TestcaseTest_Basic24.xml  test_report_SemanticTest_TestcaseTest_Basic25.xml  test_report_SemanticTest_TestcaseTest_Basic26.xml  test_report_SemanticTest_TestcaseTest_Basic27.xml  test_report_SemanticTest_TestcaseTest_Basic28.xml  test_report_SemanticTest_TestcaseTest_Basic29.xml  test_report_SemanticTest_TestcaseTest_Basic3.xml  (+231 more)
testcase/: tmp.rx
testcase/IR-1/misc1/: testcase_info.json
tmp_data/: 1.rx  2.rx  3.rx  4.rx  5.rx  6.rx  7.rx  8.rx
(+513 files in other folders)
